@@ -1,9 +1,6 @@
 package dw.gameshop.model;
 
-import jakarta.persistence.Column;
-import jakarta.persistence.Entity;
-import jakarta.persistence.Id;
-import jakarta.persistence.Table;
+import jakarta.persistence.*;
 import lombok.AllArgsConstructor;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
@@ -13,6 +10,7 @@ import org.springframework.security.core.userdetails.UserDetails;
 
 import java.time.LocalDateTime;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 
 @NoArgsConstructor
@@ -30,12 +28,19 @@ public class User implements UserDetails { // UserDetails 를 상속받아 사�
     private String email;
     @Column(name="password")
     private String password;
+
+    // 권한 관련 추가
+    @ManyToOne
+    @JoinColumn(name="user_authority")
+    private Authority authority;
+
     @Column(name="created_at", updatable = false)
     private LocalDateTime createdAt;
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of(new SimpleGrantedAuthority("user"));
+        //return List.of(new SimpleGrantedAuthority("user"));
+        return Collections.singletonList(new SimpleGrantedAuthority(authority.getAuthorityName()));
     }
 
     @Override
